--- a/wp-content/themes/my-theme/style.css
+++ b/wp-content/themes/my-theme/style.css
@@ -1,4 +1,9 @@
 /*
 
 author:Alessia
+theme name: Alessia's Theme
+version: 0.1
+description: This is my first wp theme
+tags: simple wp theme, shop, two columns,
+
 */
